tests/snapshots/integration__break_continue.snap
---
source: tests/integration.rs
expression: "run_aion_test(\"language/break_continue\")"
---
5
25
100
all break/continue tests done
