tests/snapshots/integration__char_literal.snap
---
source: tests/integration.rs
expression: "run_aion_test(\"language/char_literal\")"
---
Char works!
