tests/snapshots/integration__codegen_expressions.snap
---
source: tests/integration.rs
expression: "run_aion_test(\"compiler/codegen_expressions\")"
---
; ModuleID = 'aion_module'
source_filename = "aion_module"

declare i32 @printf(i8*, ...)
declare void @exit(i32)
declare void @GC_init()
declare ptr @aion_malloc(i64)
declare ptr @aion_realloc(i64, i64)
declare void @aion_free(ptr)
declare void @aion_memzero(ptr, i64)
declare void @aion_io_println(ptr)
declare void @aion_io_print(ptr)
declare ptr @aion_io_read_line()
declare ptr @aion_int_to_str(i64)
declare ptr @aion_float_to_str(double)
declare double @aion_str_to_float(ptr)
declare i64 @aion_string_len(ptr)
declare i64 @aion_str_eq(ptr, ptr)
declare ptr @aion_str_concat(ptr, ptr)
declare i64 @aion_str_at(ptr, i64)
declare ptr @aion_str_substr(ptr, i64, i64)
declare ptr @aion_char_to_str(i64)
declare ptr @aion_read_file(ptr)
declare i64 @aion_write_file(ptr, ptr)
declare i64 @aion_append_file(ptr, ptr)
declare i64 @aion_fs_exists(ptr)
declare ptr @aion_getenv(ptr)
declare i64 @aion_get_argc()
declare ptr @aion_get_argv_index(i64)
declare void @aion_array_oob(i64, i64)
declare void @aion_spawn(ptr)
@aion_argc = global i64 0
@aion_argv = global ptr null

@.str.0 = private unnamed_addr constant [3 x i8] c"hi\00"

define i32 @main() {
entry:
  %t0 = mul i64 2, 3
  %t1 = add i64 1, %t0
  %t2 = trunc i64 %t1 to i32
  ret i32 %t2
}

define i64 @add(i64 %a, i64 %b) {
entry:
  %t3 = add i64 %a, %b
  ret i64 %t3
}

define double @flo() {
entry:
  %t4 = fdiv double 7.0, 2.0
  ret double %t4
}

define i64 @cmp() {
entry:
  %t5 = icmp slt i64 3, 5
  %t6 = zext i1 %t5 to i64
  ret i64 %t6
}

define i64 @modu() {
entry:
  %t7 = srem i64 10, 3
  ret i64 %t7
}

define i64 @narrow() {
entry:
  %t8 = trunc i64 300 to i8
  %t9 = zext i8 %t8 to i64
  ret i64 %t9
}

define i64 @widen() {
entry:
  ret i64 42
}

define i64 @dur() {
entry:
  ret i64 5000000000
}

define ptr @greet() {
entry:
  ret ptr @.str.0
}
