tests/snapshots/integration__codegen_memory_layout.snap
---
source: tests/integration.rs
expression: "run_aion_test(\"compiler/codegen_memory_layout\")"
---
; ModuleID = 'aion_module'
source_filename = "aion_module"

declare i32 @printf(i8*, ...)
declare void @exit(i32)
declare void @GC_init()
declare ptr @aion_malloc(i64)
declare void @aion_io_println(ptr)
declare void @aion_io_print(ptr)
declare ptr @aion_int_to_str(i64)
@aion_argc = global i64 0
@aion_argv = global ptr null

@.str.0 = private unnamed_addr constant [12 x i8] c"hello, aion\00"

%Point = type { i64, ptr, i64 }
%Empty = type {  }
%Maybe = type { i64, [64 x i8] }
define i32 @main() {
entry:
  %t0 = trunc i64 0 to i32
  ret i32 %t0
}
