tests/snapshots/integration__complex_pipeline.snap
---
source: tests/integration.rs
expression: "run_aion_test(\"language/complex_pipeline\")"
---
Complex pipeline successful
