tests/snapshots/integration__dataframe_basic.snap
---
source: tests/integration.rs
expression: "run_aion_test(\"stdlib/dataframe_basic\")"
---
Step 1: Create Series
Step 2: Create DataFrame
Step 3: Add Column
Step 4: Done
