tests/snapshots/integration__date_arithmetic.snap
---
source: tests/integration.rs
expression: "run_aion_test(\"language/date_arithmetic\")"
---
Date arithmetic executed
