tests/snapshots/integration__debug_output.snap
---
source: tests/integration.rs
expression: "run_aion_test(\"compiler/debug_output\")"
---
Checking args...
Args count: 0
